--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h3>Cash-in-Drawer</h3>
-  <div class="my_cid">
+  <form class="my-cid">
     
     <div class="cid">
       <label for="penny">PENNY</label>
@@ -43,7 +43,7 @@
       <label for="twenty">TWENTY</label>
       <input type="number" class="input" id="twenty">
     </div>
-  </div>
+  </form>
   <form class="maincontainer">
     <label for="name" class="name">Bill</label>
     <input type="number" placeholder="Enter the total bill" class="bill">
@@ -54,7 +54,8 @@
 
     <div class="change_btn"><input type="submit" value="Change" class="submit" onclick = "cashRegister()"></div>
   </form>
-  <div class="display-currency-notes"></div>
+  <div class="display-text"></div>
+  <!-- <div class="display-currency-notes"></div> -->
   <div class="display"></div>
   
 
