adding some styles

--- a/index.html
+++ b/index.html
@@ -8,56 +8,56 @@
   <title>Cash register</title>
 </head>
 <body>
-  <h3>Cash-in-Drawer</h3>
-  <form class="my-cid">
+  <div class="all-iterms">
+    <h3>Current Cash-in-Drawer</h3>
+    <form class="my-cid">
     
-    <div class="cid">
-      <label for="penny">PENNY</label>
-      <input type="number" class="input" id="penny">
-    </div>
-    <div class="cid">
-      <label for="nickel">NICKEL</label>
-      <input type="number" class="input" id="nickel">
-    </div>
-    <div class="cid">
-      <label for="dime">DIME</label>
-      <input type="number" class="input" id="dime">
-    </div>
-    <div class="cid">
-      <label for="quarter">QUARTE</label>
-      <input type="number" class="input" id="quarter">
-    </div>
-    <div class="cid">
-      <label for="one">ONE</label>
-      <input type="number" class="input" id="one">
-    </div>
-    <div class="cid">
-      <label for="five">FIVE</label>
-      <input type="number" class="input" id="five">
-    </div>
-    <div class="cid">
-      <label for="ten">TEN</label>
-      <input type="number" class="input" id="ten">
-    </div>
-    <div class="cid">
-      <label for="twenty">TWENTY</label>
-      <input type="number" class="input" id="twenty">
-    </div>
-  </form>
-  <form class="maincontainer">
-    <label for="name" class="name">Bill</label>
-    <input type="number" placeholder="Enter the total bill" class="bill">
-    <label for="payment" class="pay">Payment</label>
-    <input type="number" placeholder="Enter payment" class="payment">
-    <!-- <label for="cash_register" class="cd-state">Cash register state</label> -->
-    <div class="cash_register_state"></div>
-
-    <div class="change_btn"><input type="submit" value="Change" class="submit" onclick = "cashRegister()"></div>
-  </form>
-  <div class="display-text"></div>
-  <!-- <div class="display-currency-notes"></div> -->
-  <div class="display"></div>
-  
+      <div class="cid">
+        <label for="penny">PENNY</label>
+        <input type="number" class="input" id="penny">
+      </div>
+      <div class="cid">
+        <label for="nickel">NICKEL</label>
+        <input type="number" class="input" id="nickel">
+      </div>
+      <div class="cid">
+        <label for="dime">DIME</label>
+        <input type="number" class="input" id="dime">
+      </div>
+      <div class="cid">
+        <label for="quarter">QUARTE</label>
+        <input type="number" class="input" id="quarter">
+      </div>
+      <div class="cid">
+        <label for="one">ONE</label>
+        <input type="number" class="input" id="one">
+      </div>
+      <div class="cid">
+        <label for="five">FIVE</label>
+        <input type="number" class="input" id="five">
+      </div>
+      <div class="cid">
+        <label for="ten">TEN</label>
+        <input type="number" class="input" id="ten">
+      </div>
+      <div class="cid">
+        <label for="twenty">TWENTY</label>
+        <input type="number" class="input" id="twenty">
+      </div>
+    </form>
+    <form class="maincontainer">
+      <div id="form">
+        <label for="name" class="name">Bill:</label>
+        <input type="number" placeholder="Enter the total bill" class="bill">
+        <label for="payment" class="pay">Payment:</label>
+        <input type="number" placeholder="Enter payment" class="payment">
+      </div>
+      <div class="change-btn"><input type="submit" value="Change" class="submit" onclick = "cashRegister()"></div>
+    </form>
+    <div class="display-text"></div>
+    <!-- <div class="display-currency-notes"></div> -->
+    <div class="display"></div>
+  </div>
 
   <script src="main.js"></script>
 </body>
