--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <div class="all-iterms">
+    <h1>Cash register App</h1>
+    <hr>
     <h3>Current Cash-in-Drawer</h3>
     <form class="my-cid">
-    
       <div class="cid">
         <label for="penny">PENNY</label>
         <input type="number" class="input" id="penny">
@@ -45,6 +46,11 @@
         <input type="number" class="input" id="twenty">
       </div>
     </form>
+    <select name="currency" id="currency-nodes" class="select" required>
+      <option disabled selected value>Select currency</option>
+      <option value="USD">USD</option>
+      <option value="EURO">EURO</option>
+    </select>
     <form class="maincontainer">
       <div id="form">
         <label for="name" class="name">Bill:</label>
