storing datas in the localStorage

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <form class="maincontainer">
       <div id="form">
         <label for="name" class="name">Bill:</label>
-        <input type="number" placeholder="Enter the total bill" class="bill">
+        <input type="number" placeholder="Enter the total bill. ex: 15.0" class="bill">
         <label for="payment" class="pay">Payment:</label>
         <input type="number" placeholder="Enter payment" class="payment">
       </div>
