--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
         <input type="number" class="input" id="twenty">
       </div>
     </form>
-    <select name="currency" id="currency-nodes" class="select" required>
+    <!-- <select name="currency" id="currency-nodes" class="select" required>
       <option disabled selected value>Select currency</option>
       <option value="USD">USD</option>
       <option value="EURO">EURO</option>
-    </select>
+    </select> -->
     <form class="maincontainer">
       <div id="form">
         <label for="name" class="name">Bill:</label>
