--- a/index.html
+++ b/index.html
@@ -58,6 +58,6 @@
     <div class="display-text"></div>
     <div class="display"></div>
   </div>
-  <script src="main.js"></script>
+  <script src="./assets/script/main.js"></script>
 </body>
 </html>
