adding fields with initial values

--- a/index.html
+++ b/index.html
@@ -15,35 +15,39 @@
     <form class="my-cid">
       <div class="cid">
         <label for="penny">PENNY</label>
-        <input type="number" class="input" id="penny">
+        <input type="number" class="input" id="penny" value="1.01">
       </div>
       <div class="cid">
         <label for="nickel">NICKEL</label>
-        <input type="number" class="input" id="nickel">
+        <input type="number" class="input" id="nickel" value="2.05">
       </div>
       <div class="cid">
         <label for="dime">DIME</label>
-        <input type="number" class="input" id="dime">
+        <input type="number" class="input" id="dime" value="3.1">
       </div>
       <div class="cid">
         <label for="quarter">QUARTE</label>
-        <input type="number" class="input" id="quarter">
+        <input type="number" class="input" id="quarter" value="4.25">
       </div>
       <div class="cid">
         <label for="one">ONE</label>
-        <input type="number" class="input" id="one">
+        <input type="number" class="input" id="one" value="90">
       </div>
       <div class="cid">
         <label for="five">FIVE</label>
-        <input type="number" class="input" id="five">
+        <input type="number" class="input" id="five" value="55">
       </div>
       <div class="cid">
         <label for="ten">TEN</label>
-        <input type="number" class="input" id="ten">
+        <input type="number" class="input" id="ten" value="60">
       </div>
       <div class="cid">
         <label for="twenty">TWENTY</label>
-        <input type="number" class="input" id="twenty">
+        <input type="number" class="input" id="twenty" value="80">
+      </div>
+      <div class="cid">
+        <label for="hundred">ONE_HUNDRED</label>
+        <input type="number" class="input" id="hundred" value="100">
       </div>
     </form>
     <form class="maincontainer">
