--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
   </div>
 
-  <script src="./assets/scripts/main.js"></script>
+  <script src="./assets/script/main.js"></script>
 </body>
 </html>
